--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.30'
+    ext.kotlin_version = '1.3.31'
+    ext.room_version = "2.0.0"
+    ext.lifecycle_version = "2.0.0"
+    ext.ktx_version = "1.0.1"
+    ext.constraint_layout_version = "2.0.0-alpha3"
+    ext.appcompat_version = "1.0.2"
+    ext.core_testing_version = "2.0.0-rc01"
+    ext.espresso_version = "3.1.0-alpha4"
+    ext.android_test_version = "1.1.0-alpha4"
+    ext.retrofit_version = "2.4.0"
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
